qt-restricted-extras/qscintilla6/gen_qscimacro.h

class QMetaObject;
class QsciMacro;
class QsciScintilla;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QsciMacro QsciMacro;
typedef struct QsciScintilla QsciScintilla;
QsciMacro* QsciMacro_new(QsciScintilla* parent);
QsciMacro* QsciMacro_new2(struct miqt_string asc, QsciScintilla* parent);
QMetaObject* QsciMacro_metaObject(const QsciMacro* self);
void* QsciMacro_metacast(QsciMacro* self, const char* param1);
int QsciMacro_metacall(QsciMacro* self, int param1, int param2, void** param3);
struct miqt_string QsciMacro_tr(const char* s);
void QsciMacro_clear(QsciMacro* self);
bool QsciMacro_load(QsciMacro* self, struct miqt_string asc);
struct miqt_string QsciMacro_save(const QsciMacro* self);
void QsciMacro_play(QsciMacro* self);
void QsciMacro_startRecording(QsciMacro* self);
void QsciMacro_endRecording(QsciMacro* self);
struct miqt_string QsciMacro_tr2(const char* s, const char* c);
struct miqt_string QsciMacro_tr3(const char* s, const char* c, int n);
bool QsciMacro_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QsciMacro_virtualbase_metaObject(const void* self);
bool QsciMacro_override_virtual_metacast(void* self, intptr_t slot);
void* QsciMacro_virtualbase_metacast(void* self, const char* param1);
bool QsciMacro_override_virtual_metacall(void* self, intptr_t slot);
int QsciMacro_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QsciMacro_override_virtual_play(void* self, intptr_t slot);
void QsciMacro_virtualbase_play(void* self);
bool QsciMacro_override_virtual_startRecording(void* self, intptr_t slot);
void QsciMacro_virtualbase_startRecording(void* self);
bool QsciMacro_override_virtual_endRecording(void* self, intptr_t slot);
void QsciMacro_virtualbase_endRecording(void* self);
bool QsciMacro_override_virtual_event(void* self, intptr_t slot);
bool QsciMacro_virtualbase_event(void* self, QEvent* event);
bool QsciMacro_override_virtual_eventFilter(void* self, intptr_t slot);
bool QsciMacro_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QsciMacro_override_virtual_timerEvent(void* self, intptr_t slot);
void QsciMacro_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QsciMacro_override_virtual_childEvent(void* self, intptr_t slot);
void QsciMacro_virtualbase_childEvent(void* self, QChildEvent* event);
bool QsciMacro_override_virtual_customEvent(void* self, intptr_t slot);
void QsciMacro_virtualbase_customEvent(void* self, QEvent* event);
bool QsciMacro_override_virtual_connectNotify(void* self, intptr_t slot);
void QsciMacro_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QsciMacro_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QsciMacro_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QsciMacro_staticMetaObject();
void QsciMacro_delete(QsciMacro* self);